--- a/Changes
+++ b/Changes
@@ -1,5 +1,14 @@
 Revision history for Bot-BasicBot-Pluggable-Module-MetaSyntactic
 
+1.004 Wed Jun 26 2013
+        [ENHANCEMENTS]
+        - fixed a bug that prevented to request items from categories
+          with a dash (-) in their name
+        - fixed a bug that caused an infinite loop when filtering
+          results for non-existing items
+        [DOCUMENTATION]
+        - documented the filtering capability
+
 1.003 Mon Apr 22 2013
         [ENHANCEMENTS]
         - add support for filtering results using a regular expression
